--- a/obiektowka.vcxproj
+++ b/obiektowka.vcxproj
@@ -134,11 +134,13 @@
     <ClCompile Include="czesci.cpp" />
     <ClCompile Include="guzik.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="punkty.cpp" />
     <ClCompile Include="rozne.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="czesci.hpp" />
     <ClInclude Include="guzik.hpp" />
+    <ClInclude Include="punkty.hpp" />
     <ClInclude Include="rozne.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
